export const snapshot = {};

snapshot[`Typegraph using temporal 1`] = `
'[
  {
    "types": [
      {
        "type": "object",
        "title": "temporal",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "start": 1,
          "query": 7,
          "signal": 9,
          "describe": 13
        },
        "required": [
          "start",
          "query",
          "signal",
          "describe"
        ]
      },
      {
        "type": "function",
        "title": "root_start_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 3,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_start_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "task_queue": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "string",
        "title": "root_start_fn_input_workflow_id_string",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "list",
        "title": "root_start_fn_input_args_root_start_fn_input_args_struct_list",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 5
      },
      {
        "type": "object",
        "title": "root_start_fn_input_args_struct",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "some_field": 6
        },
        "required": []
      },
      {
        "type": "string",
        "title": "root_start_fn_input_args_struct_some_field_string",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "root_query_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 8,
        "output": 3,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_query_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "function",
        "title": "root_signal_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 10,
        "output": 12,
        "materializer": 3,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_signal_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 11,
          "run_id": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "string",
        "title": "root_signal_fn_input_workflow_id_string",
        "runtime": 1,
        "policies": [],
        "injection": {
          "source": "static",
          "data": {
            "value": "\\\\"1234\\\\""
          }
        },
        "config": {},
        "as_id": false
      },
      {
        "type": "boolean",
        "title": "root_signal_fn_output",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "root_describe_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 14,
        "output": 15,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_describe_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3
        },
        "required": []
      },
      {
        "type": "object",
        "title": "root_describe_fn_output",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "start_time": 16,
          "close_time": 16,
          "state": 16
        },
        "required": []
      },
      {
        "type": "optional",
        "title": "root_describe_fn_output_start_time_root_describe_fn_output_start_time_integer_optional",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 17,
        "default_value": null
      },
      {
        "type": "integer",
        "title": "root_describe_fn_output_start_time_integer",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "start_workflow",
        "runtime": 1,
        "effect": {
          "effect": "create",
          "idempotent": false
        },
        "data": {
          "workflow_type": "<workflow_type>"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "query_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "query_type": "<query_type>"
        }
      },
      {
        "name": "signal_workflow",
        "runtime": 1,
        "effect": {
          "effect": "update",
          "idempotent": false
        },
        "data": {
          "signal_name": "<signal_name>"
        }
      },
      {
        "name": "describe_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "temporal",
        "data": {
          "name": "<name>",
          "host_secret": "<host_secret>",
          "namespace_secret": "<ns_secret>"
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]'
`;

snapshot[`Typegraph using temporal 2`] = `
'[
  {
    "types": [
      {
        "type": "object",
        "title": "temporal",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "startKv": 1,
          "query": 6,
          "signal": 11,
          "describe": 16
        },
        "required": [
          "startKv",
          "query",
          "signal",
          "describe"
        ]
      },
      {
        "type": "function",
        "title": "root_startKv_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 3,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_startKv_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "task_queue": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "string",
        "title": "root_startKv_fn_input_workflow_id_string",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "list",
        "title": "root_startKv_fn_input_args_root_startKv_fn_input_args_struct_list",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 5
      },
      {
        "type": "object",
        "title": "root_startKv_fn_input_args_struct",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {},
        "required": []
      },
      {
        "type": "function",
        "title": "root_query_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 10,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_query_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3,
          "args": 8
        },
        "required": []
      },
      {
        "type": "list",
        "title": "root_query_fn_input_args_root_query_fn_input_args_string_list",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 9
      },
      {
        "type": "string",
        "title": "root_query_fn_input_args_string",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "root_query_fn_output",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 9,
        "default_value": null
      },
      {
        "type": "function",
        "title": "root_signal_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 12,
        "output": 15,
        "materializer": 3,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_signal_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3,
          "args": 13
        },
        "required": []
      },
      {
        "type": "list",
        "title": "root_signal_fn_input_args_root_signal_fn_input_args_struct_list",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 14
      },
      {
        "type": "object",
        "title": "root_signal_fn_input_args_struct",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "key": 9,
          "value": 9
        },
        "required": []
      },
      {
        "type": "boolean",
        "title": "root_signal_fn_output",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "root_describe_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 17,
        "output": 18,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_describe_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3
        },
        "required": []
      },
      {
        "type": "object",
        "title": "root_describe_fn_output",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "start_time": 19,
          "close_time": 19,
          "state": 19
        },
        "required": []
      },
      {
        "type": "optional",
        "title": "root_describe_fn_output_start_time_root_describe_fn_output_start_time_integer_optional",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 20,
        "default_value": null
      },
      {
        "type": "integer",
        "title": "root_describe_fn_output_start_time_integer",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "start_workflow",
        "runtime": 1,
        "effect": {
          "effect": "create",
          "idempotent": false
        },
        "data": {
          "workflow_type": "keyValueStore"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "query_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "query_type": "getValue"
        }
      },
      {
        "name": "signal_workflow",
        "runtime": 1,
        "effect": {
          "effect": "update",
          "idempotent": false
        },
        "data": {
          "signal_name": "setValue"
        }
      },
      {
        "name": "describe_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "temporal",
        "data": {
          "name": "test",
          "host_secret": "HOST",
          "namespace_secret": "NAMESPACE"
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]'
`;
